# email-review-env

./: Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_local.py
email_review_env/: __init__.py  graders.py  models.py  tasks.py
server/: Dockerfile  app.py  environment.py  graders.py  requirements.txt
src/email_review_env/: __init__.py  env.py  graders.py  models.py  tasks.py
tasks/: __init__.py
tasks/task_1_easy/: grader.py
tasks/task_2_medium/: grader.py
tasks/task_3_hard/: grader.py
