[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_review_env"
version = "1.0.0"
description = "Customer support email triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "websockets>=11.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

# 🔥 ADD THIS PART HERE (very important)
[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["graders", "models", "client", "inference", "app", "test_local"]
packages = ["server", "tasks", "tasks.task_1_easy", "tasks.task_2_medium", "tasks.task_3_hard", "email_review_env"]

[tool.setuptools.package-dir]
email_review_env = "src/email_review_env"